# oid-cpp

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
lib/: CMakeLists.txt
lib/include/oid/: oid.h  oid.hpp
lib/src/: oid.c
test/: CMakeLists.txt  main.cpp  mocha.c  mocha.h
